# axum-query

./: Cargo.toml  Taskfile.yml
example/: Cargo.toml  Taskfile.yml
example/src/: config.rs  lib.rs  router.rs
example/src/graphql/: mod.rs  schema.rs
