[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.4", features = ["uuid"] }
async-graphql-axum = "6.0.4"
axum = { version = "0.6.20", features = ["headers"] }
once_cell = "1.18.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
